assets/style.css
/* 
--table of contents--

1. global styles
2. typography
3. components 
    3.1 buttons
4. sections
5. media queries
*/


/* ============

global styles

============ */

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');

:root {
  /* colors   */
  --clr-bodybg-500: hsl(0, 0%, 98%);
    --clr-navbg-500: rgba(86, 136, 203,50%);
    --clr-default-500: hsl(0, 0%, 0%);
    --clr-herotitle-500: hsl(0, 0%, 100%);
    --clr-fgnavbar-500: hsl(0, 0%, 100%);
    --clr-first-500: hsl(209, 100%, 15%);
    --clr-second-500: hsl(88, 52%, 58%);
    --clr-second-500-bg: rgba(152, 204, 92, 60%);
    --clr-third-500: hsl(359, 47%, 59%);
    --clr-hero-grad: linear-gradient(90deg, #061D32 0.59%, rgba(3, 35, 64, 0.887142) 11.98%, rgba(0, 40, 77, 0.786929) 25%, rgba(49, 81, 111, 0.54) 55%, rgba(154, 170, 184, 0.311182) 82%, rgba(255, 255, 255, 0) 100%);
    --clr-hero-grad-brk: linear-gradient(90deg, #061D32 0.59%, rgba(3, 35, 64, 0.887142) 11.98%, rgba(0, 40, 77, 0.786929) 20.14%, rgba(49, 81, 111, 0.54) 38.9%, rgba(154, 170, 184, 0.311182) 56.2%, rgba(255, 255, 255, 0) 100%);

    /* font families */
    --ff-h: 'Montserrat', sans-serif;
    --ff-p: 'Open Sans', sans-serif;

    /* font sizes */
    --fs-h1: 2.375rem;
    --fs-h2: 2rem;
    --fs-h3: 1.2rem;
    --fs-p: 1.0625rem;
    --fs-btn: 0.875rem;

    /* layout */
    --spacer: 1rem;
    --spacer-sm: calc(var(--spacer) * 0.5);
    --spacer-md: calc(var(--spacer) * 2);
    --spacer-lg: calc(var(--spacer) * 3);
    --spacer-xlg: calc(var(--spacer) * 5);

    --navbar-height: 4rem;
    --wrapper-maxwidth: 1220px;

}

*, *::before, *::after {
    box-sizing: border-box;
    /* border: 1px solid red !important; */
}

html {
    scroll-behavior: smooth;
    font-size: 1rem;            /* restore rem size to browser default */
}

body {
    font-family: var(--ff-p);
    color: var(--clr-default-500);
}

img {
  max-width: 100%;
}

.wrapper {
  width: min(90%, var(--wrapper-maxwidth));
  margin: 0 auto;
}

/* ============

typography

============ */

a {
  text-decoration: none;
  color: var(--clr-default-500);  /* fallback color */
  color: var(--clr-link);
}

strong {
  font-weight: bold;
}

h1, h2 {
  font-family: var(--ff-h);
  font-weight: bold;
  letter-spacing: -1.5;
  color: var(--clr-first-500);
  margin-top: var(--spacer-sm);
}

h1 {
  font-size: var(--fs-h1);
}

h2 {
  font-size: var(--fs-h2);
}

h3 {
  font-size: var(--fs-h3);
  color: var(--clr-second-500);
}

p {
  font-size: var(--fs-p);
  margin-top: var(--spacer);
  line-height: 1.4;
  max-width: 50ch;
}

/* ============

components

============ */

.btn {
  display: inline-block;
  padding: 1em 3em;
  border: 2px solid var(--clr-second-500);
  border-radius: 15px;
  margin-top: var(--spacer-md);
  margin-bottom: var(--spacer-md);
  font-size: var(--fs-btn);
  letter-spacing: 0.05em;
}

section {
  /* margin-top: var(--spacer-lg); */
  padding-top: var(--spacer-lg);
  padding-bottom: var(--spacer-lg);
}


/* ============

navbar

============ */


.navbar {
    position: fixed;
    width: 100%;
    z-index: 99;
    background: var(--clr-navbg-500);
    height: var(--navbar-height);
    font-family: var(--ff-p);
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    --clr-link: var(--clr-fgnavbar-500);
    text-align: center;
    
}

.navbar img {
    height: var(--navbar-height);
    padding: 0.3rem;
}

.nav-toggle {
    position: absolute !important;
    /* workaround to make it tappable */
    top: -9999px !important;
    left: -9999px !important;
  }

.nav-toggle-label {
    position: absolute;
    display: flex;
    top: 0;
    right: 0;
    margin-right: 1.5em;
    height: 100%;
    align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
  display: block;
  background: var(--clr-fgnavbar-500);
  height: 2px;
  width: 2em;
  border-radius: 2px;
  position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
  content: '';
  position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
  }
  
.nav-toggle-label span::after {
    top: 7px;
  }

.nav-toggle:checked ~ nav {
    transform: scale(1,1);
  }

.nav-toggle:checked ~ nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}

nav {
    position: absolute;
    text-align: right;
    top: 100%;
    right: 0;
    padding-right: 1.5em;
    background: var(--clr-navbg-500);
    width: 100%;
    transform: scale(1, 0);
    transform-origin:top;
    transition: transform 400ms ease-in-out;
}

nav a:hover,
nav a:focus {
    color: var(--clr-second-500);
  }

nav li {
    margin-bottom: .8em;
    margin-left: .8em;
  }

nav a {
    text-decoration: none;
    font-size: 1rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
  }

/* ============

hero

============ */

.hero {
  background: 
  var(--clr-hero-grad),
  url(/assets/imgs/IMG_20170604_155258\ crop2.jpg);
  background-size: cover;
  background-position: top left 45%;
  background-repeat: no-repeat;
  font-family: 'Montserrat', sans-serif;
  font-style: normal;  
}

.hero .wrapper {
  padding-top: calc(6vw + var(--navbar-height));
}

.hero__title {
  display: block;
  position: relative;
  left: -0.3vw;     /* fine alignment */
  font-weight: 300;
  font-size: clamp(40px, 8vw, 8rem);
  letter-spacing: 0.05em;

  color: var(--clr-herotitle-500);

  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.hero__title strong {
  font-weight: 600;
}

.hero__subtitle {
  display: block;
  font-weight: 700;
  font-size: clamp(30px, 6vw, 6rem);
  color: var(--clr-second-500);
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.hero__text {
  display: block;
  position: relative;
  left: 0.2vw;     /* fine alignment */
  font-weight: 600;
  font-size: clamp(16px, 2vw, 2em);
  line-height: 1.2;

  color: #63C7FF;

  padding: 3em 0;
}


/* ============

laboratory

============ */

.blob1 {                /* SVG */
  position: absolute;   /* hide from dom workaround */
  width: 0;
  height: 0;
}

.blob1__img {
  clip-path: url(#myclip);
  object-fit:cover;
  /* aspect-ratio: 1 / 1; */
}

.laboratory .f-col {
  position: relative;     /* to allow pseudoelement on child */
}

.blob-container::before {
  content: "";
  background: var(--clr-second-500-bg);
  position: absolute;
  width: 105%;
  height: 100%;
  z-index: -1;
  clip-path: url(#myclip);
  transform-origin: center;
  transform: rotate(180deg);
}


/* ============

media queries

============ */

@media screen and (min-width: 500px) {

  .hero {
    background: 
    var(--clr-hero-grad-brk),
    url(/assets/imgs/IMG_20170604_155258\ crop2.jpg);
    background-size: cover;
    background-position: top left 40%;
    background-repeat: no-repeat;

  }

  .f-row {
    display: flex;
    gap: 2em;
  }

  .f-col:nth-of-type(1) {
    align-self: center;
  }

  .f-col:nth-of-type(2) {
    align-self: flex-start; /* ignore flex row height to position pseudo element below img clip-path*/
  }

  .f-col {
    width: 100%;
  }
}

@media screen and (min-width: 1000px) {

    .nav-toggle-label {
        display: none;
    }

    .navbar__grid {
        display: grid;
        grid-template-columns: auto auto;
        text-align: left;
    }

    nav {
        all: unset;
        display: flex;
        align-items: center;    
    }
    
    nav ul {
      width: 100%;
      display: flex;
      justify-content: space-around;
    }
    
    nav li {
      margin-bottom: 0;
    }
    
    nav a {
      opacity: 1;
      position: relative;
      font-size: 0.9rem;
    }
    
    nav a::before {
      content: '';
      display: block;
      height: 2px;
      background: var(--clr-second-500);
      position: absolute;
      bottom: -.75em;
      left: 0;
      right: 0;
      transform: scale(0, 1);
      transition: transform ease-in-out 250ms;
    }
    
    nav a:hover::before,
    nav a:focus::before {
      transform: scale(1,1);
    }
  }

